--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.76.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "prettier": "^3.6.2"
   }
 }
