added env during run time for backend image

--- a/docker/Dockerfile.backend
+++ b/docker/Dockerfile.backend
@@ -7,6 +7,11 @@ RUN npm install
 
 COPY ./backend ./
 
+ARG SUPABASE_DIRECT_URL
+ARG SUPABASE_ANON_KEY
+ENV SUPABASE_URL=$SUPABASE_URL
+ENV SUPABASE_ANON_KEY=$SUPABASE_ANON_KEY
+
 EXPOSE 3000
 
 CMD ["node", "index.js"]
