--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Deploy to the VM
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/authorized_keys
+          chmod 600 ~/.ssh/authorized_keys
           ssh -o StrictHostKeyChecking=no -i ~/ssh_key root@154.26.134.104 -t "docker stop pixelvai-backend && docker run -d \ -e SUPABASE_URL=${{ secrets.SUPABASE_URL }} \-e SUPABASE_ANON_KEY=${{ secrets.SUPABASE_ANON_KEY }} \ -p 3000:3000 shrutiiiyet/pixelvai-backend:${{ github.sha }}"
