--- a/.github/workflows/cd_frontend.yml
+++ b/.github/workflows/cd_frontend.yml
@@ -25,6 +25,6 @@ jobs:
       - name: Deploy to the VM
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/authorized_keys
+          chmod 600 ~/.ssh/authorized_keys
           ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@154.26.134.104 -t "docker stop pixelvai-frontend && docker run -d -p 5173:80 shrutiiiyet/pixelvai-frontend:${{ github.sha }}"
