--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -1,7 +1,7 @@
 name: Deploy the backend
 on:
   push:
-    branches: [ main ]
+    branches: [ Pipeline-testing ]
 jobs: 
   build:
     runs-on: ubuntu-latest
