--- a/.github/workflows/cd_frontend.yml
+++ b/.github/workflows/cd_frontend.yml
@@ -1,7 +1,7 @@
 name: Deploy the frontend
 on:
   push:
-    branches: [ main ]
+    branches: [ Pipeline-testing ]
 jobs: 
   build:
     runs-on: ubuntu-latest
