--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -24,8 +24,6 @@ jobs:
           tags: shrutiiiyet/pixelvai-backend:${{ github.sha }}
       - name: Deploy to the VM
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" &> ~/.ssh/id_rsa
-          ls /home/runner/.ssh
-          hmod 600 ~/.ssh/id_rsa
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@154.26.134.104 -t "docker stop pixelvai-backend && docker run -d \ -e SUPABASE_URL=${{ secrets.SUPABASE_URL }} \-e SUPABASE_ANON_KEY=${{ secrets.SUPABASE_ANON_KEY }} \ -p 3000:3000 shrutiiiyet/pixelvai-backend:${{ github.sha }}"
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" &> ~/ssh_key
+          chmod 700 ~/home/runner/ssh_key
+          ssh -o StrictHostKeyChecking=no -i ~/ssh_key root@154.26.134.104 -t "docker stop pixelvai-backend && docker run -d \ -e SUPABASE_URL=${{ secrets.SUPABASE_URL }} \-e SUPABASE_ANON_KEY=${{ secrets.SUPABASE_ANON_KEY }} \ -p 3000:3000 shrutiiiyet/pixelvai-backend:${{ github.sha }}"
