--- a/.github/workflows/cd_frontend.yml
+++ b/.github/workflows/cd_frontend.yml
@@ -24,8 +24,6 @@ jobs:
           tags: shrutiiiyet/pixelvai-frontend:${{ github.sha }}
       - name: Deploy to the VM
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          ls /home/runner/.ssh
-          chmod 600 ~/.ssh/id_rsa
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa root@154.26.134.104 -t "docker stop pixelvai-frontend && docker run -d -p 5173:80 shrutiiiyet/pixelvai-frontend:${{ github.sha }}"
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/ssh_key
+          chmod 700 home/runner/ssh_key
+          ssh -o StrictHostKeyChecking=no -i ~/ssh_key root@154.26.134.104 -t "docker stop pixelvai-frontend && docker run -d -p 5173:80 shrutiiiyet/pixelvai-frontend:${{ github.sha }}"
