--- a/.github/workflows/cd_backend.yml
+++ b/.github/workflows/cd_backend.yml
@@ -26,7 +26,7 @@ jobs:
         run: |
           echo "${{ secrets.SSH_PRIVATE_KEY }}" &> ~/ssh_key
           chmod 700 ~/ssh_key
-          # ssh -o StrictHostKeyChecking=no -i ~/ssh_key root@154.26.134.104 -t "
+          ssh -o StrictHostKeyChecking=no -i ~/ssh_key root@154.26.134.104 -t "
           docker stop pixelvai-backend || true &&
           docker rm pixelvai-backend || true &&
           docker run -d \
