--- a/.github/workflows/cd_frontend.yml
+++ b/.github/workflows/cd_frontend.yml
@@ -28,11 +28,10 @@ jobs:
           chmod 700 ~/ssh_key
           ssh -o StrictHostKeyChecking=no -i ~/ssh_key root@154.26.134.104 -t "
           docker stop pixelvai-frontend || true &&
-          docker rm pixelvai-frontend || true &&
+          docker rm pixelvai-frontend || true
           docker run -d \
           --name pixelvai-frontend \
           -p 5173:5173 \
           shrutiiiyet/pixelvai-frontend:${{ github.sha }}
-          docker run --name pixelvai-frontend -d -p 5173:5173 shrutiiiyet/pixelvai-frontend:${{ github.sha }}
           "
           
