Test automation set for pull requests on main

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,9 +1,9 @@
-name: Run Vitest
+name: Run Tests
 
 on:
-  push:
+  pull_request:
     branches:
-      - automating-tests
+      - main
 
 jobs:
   test:
