--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "prettier": "^3.6.2",
     "supertest": "^7.1.4",
     "vitest": "^4.0.4"
   },
