--- a/.github/workflows/autoformat.yml
+++ b/.github/workflows/autoformat.yml
@@ -36,8 +36,10 @@ jobs:
           if [ -n "$(git status --porcelain)" ]; then
             git config user.name "github-actions[bot]"
             git config user.email "github-actions[bot]@users.noreply.github.com"
+
+            LAST_COMMIT_MSG=$(git log -1 --pretty=%B | head -n 1 | tr -d '\r' | tr -d '\n')
             git add .
-            git commit -m "🧹 Autoformat code with Prettier"
+            git commit -m "🧹 Autoformat: ${LAST_COMMIT_MSG}"
             git push
           else
             echo "✅ Code is already formatted. No changes to commit."
